[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/scripts/Menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/Menu/MainMenuButtons/LoadGameButtonButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Menu/MainMenuButtons/OptionsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Menu/MainMenuButtons/QuitGameButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Menu/MainMenuButtons/NewGameButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Transitions/fade_in.tscn" type="PackedScene" id=6]
[ext_resource path="res://resources/fonts/rg-future-italic.tres" type="DynamicFont" id=7]
[ext_resource path="res://resources/audio/ui/button_click.wav" type="AudioStream" id=8]
[ext_resource path="res://resources/audio/ui/button_navigate.wav" type="AudioStream" id=9]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MainMenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="MainMenu"]
margin_right = 1280.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 7 )
text = "ESCAPE FROM ZORDOOM"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 520.0
margin_top = -20.0
margin_right = 800.0
margin_bottom = 700.0
alignment = 1

[node name="CenterRow" type="HBoxContainer" parent="MainMenu/VBoxContainer"]
margin_right = 280.0
margin_bottom = 720.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="MainMenu/VBoxContainer/CenterRow"]
margin_right = 280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="NewGameButton" parent="MainMenu/VBoxContainer/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_top = 236.0
margin_right = 280.0
margin_bottom = 295.0
text = "SELECT LEVEL"
scene_to_load = "res://scenes/Menu/LevelView.tscn"

[node name="LoadGameButton" parent="MainMenu/VBoxContainer/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 299.0
margin_right = 280.0
margin_bottom = 358.0
scene_to_load = "res://scenes/Menu/LoadGame.tscn"

[node name="OptionsButton" parent="MainMenu/VBoxContainer/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 362.0
margin_right = 280.0
margin_bottom = 421.0
scene_to_load = "res://scenes/Menu/Options.tscn"

[node name="QuitGameButton" parent="MainMenu/VBoxContainer/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 425.0
margin_right = 280.0
margin_bottom = 484.0
text = "EXIT"

[node name="FadeIn" parent="MainMenu" instance=ExtResource( 6 )]
visible = false
color = Color( 0, 0, 0, 0 )

[node name="Audio" type="Node" parent="MainMenu"]

[node name="Click" type="AudioStreamPlayer" parent="MainMenu/Audio"]
stream = ExtResource( 8 )

[node name="Move" type="AudioStreamPlayer" parent="MainMenu/Audio"]
stream = ExtResource( 9 )

[connection signal="focus_entered" from="MainMenu/VBoxContainer/CenterRow/Buttons/OptionsButton" to="." method="_on_OptionsButton_focus_entered"]
[connection signal="pressed" from="MainMenu/VBoxContainer/CenterRow/Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="fade_finished" from="MainMenu/FadeIn" to="." method="_on_FadeIn_fade_finished"]
